examples/test/testpolicy13246.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13246
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key48: value5
      key10: value11
      key43: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value0
          key19: value49
          key6: value44
      podSelector:
        matchLabels:
          key47: value28
          key7: value1
